--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
         with:
           path: ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+      - name: Spotless Apply
+        run: ./gradlew :spotlessApply
       - name: Build
         run: ./gradlew downloadAssets runData build
       - name: Upload artifacts
